think the notes are done. Now to do the README.md file
