# models/Note.go
@@ -2,14 +2,17 @@
 package models
 
 import (
+	"errors"
 	"fmt"
 )
 
+// swagger:model NoteStruct
 type Note struct {
 	tableName struct{} `sql:"notes"`
 
 	Id     int    `json:"noteId" pg:"id"`
-	UserId int    `json:"userId" pg:"user_id"`
+	UserId int    `json:"-" pg:"user_id"`
+	Author *User  `json:"author" pg:"-"`
 	Note   string `json:"note" pg:"note"`
 }
 
@@ -20,6 +23,9 @@ func (t Note) String() string {
 func (t Note) Validate() error {
 
 	// TODO: add here some expected validation rules
+	if t.Author == nil {
+		return errors.New("Note does not have an Author!")
+	}
 
 	return nil
 }
